New certificates, translations added

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -4,13 +4,34 @@
   "app.welding": "Welding",
   "app.contact": "Contact",
   "app.gallery": "Gallery",
+
   "app.homepage.firstPictureText": "Experts for welding and assembly of metal construction",
-  "app.homepage.ponos": "We are proud of the exceptional professional competence of our welders, who perform their work with high quality and speed",
-  "app.homepage.montaza": "V našem podjetju izvajamo tudi strokovno montažo kovinskih konstrukcij",
-  "app.homepage.opis": "Intermont je bil ustanovljen konec leta 2017, ko smo začeli aktivno delovati na področju vzdrževanja in montaže. Z razvojem in rastjo kakovostnega varilskega kadra se je povečala montaža opreme in cevovodnih sistemov v najzahtevnejših elektrarnah, klimatskih, ogrevalnih in hladilnih sistemih, predelovalnih obratih in rafinerijah v kemični in farmacevtski industriji. nadaljevalo v naslednjih letih. Naše storitve opravljamo predvsem v srednji Evropi, pa tudi po vsem svetu. Danes podjetje zaposluje 70 ljudi, s katerimi smo prisotni na različnih gradbiščih kot sta BMW München in Dingolfing. Odgovorni smo za montažo opreme in cevovodov ogrevalnih in hladilnih sistemov, vodovodnih inštalacij in električnih naprav. Prisotni smo tudi pri podpori in izvedbi novih projektov v kemični industriji. Naša trenutna gradbišča so na primer: Alz Chem Trostberg, kemični park Gendorf, rafinerija PCK. Poslanstvo našega podjetja je z odzivnostjo in kakovostjo naših storitev zagotavljati zanesljivo podporo našim strankam. Prizadevamo si za prilagajanje potrebam trga in z nenehnim izpolnjevanjem stremimo k strokovnemu razvoju in izobraževanju zaposlenih.",
+  "app.homepage.about": "About the company",
+  "app.homepage.aboutText": "Our company is engaged in professional welding work and provides quality services to customers. We have many years of experience in the field of welding and use the latest technology. Our goal is to provide high quality services and meet the needs of our customers.",
+  "app.homepage.ourWork": "Our work",
+  "app.homepage.ourWorkText": "Our experienced welders use the latest technology and techniques to create precise, high-quality welds that are strong and durable. From stainless steel to aluminum and titanium alloy, we work with a variety of materials to create custom metalwork that meets specific customer needs.",
+  "app.homepage.services": "Services",
+  "app.homepage.servicesText1": "We offer a wide range of welding services for a variety of applications and materials, including MIG, TIG, MAG, electrode and laser welding. Our experts are experienced and qualified to perform all types of welding work. We provide our customers with quality and reliable service and are proud of our team of experienced welders who have a variety of",
+  "app.homepage.servicesButton": "certificates and qualifications",
+  "app.homepage.servicesText2": ". Our welding work complies with modern industry standards, ensuring that your project is completed to the highest quality.",
+  "app.homepage.howWeOperate": "How we operate",
+  "app.homepage.howWeOperateText": "We use the latest technology and expertise in our work. We prepare an individual work plan for each client that meets their specific needs. Our goal is to provide an efficient and personalized service for each individual customer.",
+  "app.homepage.whyChooseUs": "Why choose us?",
+  "app.homepage.whyChooseUsText": "At our welding service, we understand that every project is unique. That's why we take the time to listen to your needs to create meaningful solutions that are tailored to your specific requirements. From initial design to final delivery, we work closely with you to ensure your project is completed in a timely, efficient manner.",
+  "app.homepage.gallery": "Gallery",
+  "app.homepage.galleryButton": "explore our welding gallery",
+  "app.homepage.galleryText": "and see examples of our work and the breadth of our capabilities. Our extensive experience and expertise enable us to provide customized solutions for even the most complex welding challenges.",
+  "app.homepage.location": "Location",
+  "app.homepage.locationText": "We are located near Maribor, Slovenia, and we provide our services throughout Europe",
+  "app.homepage.locationButton": "contact us!",
+
+  "app.quality.text": "The quality of the services provided is our basic competitive advantage, which we want to demonstrate in an officially recognized way. That is why we have obtained certificates",
+  "app.quality.textBold": "ISO 9001:2008, EN ISO 3834-2, AD 2000 HP0, SCCP, EN 729/3 (DIN 18800/7) in EN 1090-2",
+
   "app.contact.contactUs": "Contact us!",
   "app.contact.message": "Message",
   "app.contact.send": "Send",
+
   "app.gallery.title1": "Title1",
   "app.gallery.title2": "Title2",
   "app.gallery.title3": "Title3"
