--- a/src/translations/slo.json
+++ b/src/translations/slo.json
@@ -4,13 +4,34 @@
   "app.welding": "Varjenje",
   "app.contact": "Kontakt",
   "app.gallery": "Galerija",
+
   "app.homepage.firstPictureText": "Strokovnjaki za varjenje in montažo kovinskih konstrukcij",
-  "app.homepage.ponos": "Ponosni smo na izredno strokovno usposobljenost naših varilcev, ki svoje delo opravijo kakovostno in hitro",
-  "app.homepage.montaza": "V našem podjetju izvajamo tudi strokovno montažo kovinskih konstrukcij",
-  "app.homepage.opis": "Intermont je bil ustanovljen konec leta 2017, ko smo začeli aktivno delovati na področju vzdrževanja in montaže. Z razvojem in rastjo kakovostnega varilskega kadra se je povečala montaža opreme in cevovodnih sistemov v najzahtevnejših elektrarnah, klimatskih, ogrevalnih in hladilnih sistemih, predelovalnih obratih in rafinerijah v kemični in farmacevtski industriji. nadaljevalo v naslednjih letih. Naše storitve opravljamo predvsem v srednji Evropi, pa tudi po vsem svetu. Danes podjetje zaposluje 70 ljudi, s katerimi smo prisotni na različnih gradbiščih kot sta BMW München in Dingolfing. Odgovorni smo za montažo opreme in cevovodov ogrevalnih in hladilnih sistemov, vodovodnih inštalacij in električnih naprav. Prisotni smo tudi pri podpori in izvedbi novih projektov v kemični industriji. Naša trenutna gradbišča so na primer: Alz Chem Trostberg, kemični park Gendorf, rafinerija PCK. Poslanstvo našega podjetja je z odzivnostjo in kakovostjo naših storitev zagotavljati zanesljivo podporo našim strankam. Prizadevamo si za prilagajanje potrebam trga in z nenehnim izpolnjevanjem stremimo k strokovnemu razvoju in izobraževanju zaposlenih.",
+  "app.homepage.about": " O podjetju",
+  "app.homepage.aboutText": "Naše podjetje se ukvarja s strokovnim varilskim delom in zagotavlja kakovostne storitve strankam. Imamo dolgoletne izkušnje na področju varjenja in uporabljamo najnovejšo tehnologijo. Naš cilj je zagotoviti visoko kakovostne storitve in zadovoljiti potrebe naših strank.",
+  "app.homepage.ourWork": "Naše delo",
+  "app.homepage.ourWorkText": "Naši izkušeni varilci uporabljajo najnovejšo tehnologijo in tehnike za ustvarjanje natančnih, visokokakovostnih varov, ki so močni in trajni. Od nerjavnega jekla do aluminija in titanove zlitine, delamo z različnimi materiali, da ustvarimo prilagojena kovinska dela, ki ustrezajo specifičnim potrebam strank.",
+  "app.homepage.services": "Storitve",
+  "app.homepage.servicesText1": "Ponujamo širok nabor varilskih storitev za različne aplikacije in materiale, vključno z MIG, TIG, MAG, elektrodnim in laserskim varjenjem. Naši strokovnjaki so izkušeni in usposobljeni za opravljanje vseh vrst varilskih del. Strankam zagotavljamo kakovostno in zanesljivo storitev. Ponosni smo na našo ekipo izkušenih varilcev, ki imajo različne",
+  "app.homepage.servicesButton": "certifikate in kvalifikacije",
+  "app.homepage.servicesText2": ". Naše varilsko delo je v skladu s sodobnimi industrijskimi standardi, kar zagotavlja, da bo vaš projekt dokončan z najvišjo kakovostjo.",
+  "app.homepage.howWeOperate": "Kako delujemo",
+  "app.homepage.howWeOperateText": "Pri delu uporabljamo najnovejšo tehnologijo in strokovno znanje. Za vsako stranko pripravimo individualni načrt dela, ki ustreza njihovim specifičnim potrebam. Naš cilj je zagotoviti učinkovito in prilagojeno storitev za vsakega posameznega kupca.",
+  "app.homepage.whyChooseUs": "Zakaj izbrati nas?",
+  "app.homepage.whyChooseUsText": "V naši varilni storitvi razumemo, da je vsak projekt edinstven. Zato si vzamemo čas in prisluhnemo vašim potrebam, da ustvarimo smiselne rešitve, ki so prilagojene vašim specifičnim zahtevam. Od prvotne zasnove do končne dostave tesno sodelujemo z vami, da zagotovimo, da bo vaš projekt zaključen pravočasno učinkovito.",
+  "app.homepage.gallery": "Galerija",
+  "app.homepage.galleryButton": "raziščite našo galerijo varjenja",
+  "app.homepage.galleryText": "in si oglejte primere našega dela in širino naših zmogljivosti. Naša obsežna izkušnja in strokovnost nam omogočata zagotavljanje prilagojenih rešitev tudi za najbolj zapletene varilske izzive.",
+  "app.homepage.location": "Lokacija",
+  "app.homepage.locationText": "Locirani smo v okolici Maribora, svoje storitve pa opravljamo po vsej Evropi",
+  "app.homepage.locationButton": "kontaktirajte nas!",
+
+  "app.quality.text": "Kvaliteta opravljenih storitev je naša osnovna konkurenčna prednost, ki jo želimo izkazati tudi na uradno priznani način. Zato smo pridobili certifikate",
+  "app.quality.textBold": "ISO 9001:2008, EN ISO 3834-2, AD 2000 HP0, SCCP, EN 729/3 (DIN 18800/7) in EN 1090-2",
+
   "app.contact.contactUs": "Kontaktirajte nas!",
   "app.contact.message": "Sporočilo",
   "app.contact.send": "Pošlji",
+
   "app.gallery.title1": "Dodaj naslov!",
   "app.gallery.title2": "Dodaj naslov!",
   "app.gallery.title3": "Dodaj naslov!"
