--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -4,13 +4,34 @@
   "app.welding": "Schweißen",
   "app.contact": "Kontakt",
   "app.gallery": "Galerie",
+
   "app.homepage.firstPictureText": "Experten für Schweißen und Montage von Metallkonstruktionen",
-  "app.homepage.ponos": "Ponosni smo na izredno strokovno usposobljenost naših varilcev, ki svoje delo opravijo kakovostno in hitro",
-  "app.homepage.montaza": "V našem podjetju izvajamo tudi strokovno montažo kovinskih konstrukcij",
-  "app.homepage.opis": "Intermont je bil ustanovljen konec leta 2017, ko smo začeli aktivno delovati na področju vzdrževanja in montaže. Z razvojem in rastjo kakovostnega varilskega kadra se je povečala montaža opreme in cevovodnih sistemov v najzahtevnejših elektrarnah, klimatskih, ogrevalnih in hladilnih sistemih, predelovalnih obratih in rafinerijah v kemični in farmacevtski industriji. nadaljevalo v naslednjih letih. Naše storitve opravljamo predvsem v srednji Evropi, pa tudi po vsem svetu. Danes podjetje zaposluje 70 ljudi, s katerimi smo prisotni na različnih gradbiščih kot sta BMW München in Dingolfing. Odgovorni smo za montažo opreme in cevovodov ogrevalnih in hladilnih sistemov, vodovodnih inštalacij in električnih naprav. Prisotni smo tudi pri podpori in izvedbi novih projektov v kemični industriji. Naša trenutna gradbišča so na primer: Alz Chem Trostberg, kemični park Gendorf, rafinerija PCK. Poslanstvo našega podjetja je z odzivnostjo in kakovostjo naših storitev zagotavljati zanesljivo podporo našim strankam. Prizadevamo si za prilagajanje potrebam trga in z nenehnim izpolnjevanjem stremimo k strokovnemu razvoju in izobraževanju zaposlenih.",
+  "app.homepage.about": "Über das Unternehmen",
+  "app.homepage.aboutText": "Unser Unternehmen beschäftigt sich mit professionellen Schweißarbeiten und bietet seinen Kunden qualitativ hochwertige Dienstleistungen. Wir verfügen über langjährige Erfahrung im Bereich Schweißen und setzen modernste Technik ein. Unser Ziel ist es, qualitativ hochwertige Dienstleistungen zu erbringen und die Bedürfnisse unserer Kunden zu erfüllen.",
+  "app.homepage.ourWork": "Unsere Arbeit",
+  "app.homepage.ourWorkText": "Unsere erfahrenen Schweißer verwenden die neuesten Technologien und Techniken, um präzise, ​​hochwertige Schweißnähte herzustellen, die stark und langlebig sind. Von Edelstahl bis hin zu Aluminium- und Titanlegierungen arbeiten wir mit einer Vielzahl von Materialien, um kundenspezifische Metallarbeiten zu erstellen, die den spezifischen Kundenanforderungen entsprechen.",
+  "app.homepage.services": "Dienstleistungen",
+  "app.homepage.servicesText1": "Wir bieten eine breite Palette von Schweißdienstleistungen für eine Vielzahl von Anwendungen und Materialien an, darunter MIG-, TIG-, MAG-, Elektroden- und Laserschweißen. Unsere Experten sind erfahren und qualifiziert, um alle Arten von Schweißarbeiten auszuführen. Wir bieten unseren Kunden einen qualitativ hochwertigen und zuverlässigen Service und sind stolz auf unser Team aus erfahrenen Schweißern, die über eine Vielzahl von",
+  "app.homepage.servicesButton": "Zertifikaten und Qualifikationen ",
+  "app.homepage.servicesText2": "verfügen. Unsere Schweißarbeiten entsprechen den modernen Industriestandards und stellen sicher, dass Ihr Projekt in höchster Qualität abgeschlossen wird.",
+  "app.homepage.howWeOperate": "Wie wir arbeiten",
+  "app.homepage.howWeOperateText": "Bei unserer Arbeit setzen wir modernste Technik und Know-how ein. Wir erstellen für jeden Kunden einen individuellen Arbeitsplan, der seinen spezifischen Bedürfnissen entspricht. Unser Ziel ist es, jedem einzelnen Kunden einen effizienten und personalisierten Service zu bieten.",
+  "app.homepage.whyChooseUs": "Warum uns wählen?",
+  "app.homepage.whyChooseUsText": "Bei unserem Schweißservice verstehen wir, dass jedes Projekt einzigartig ist. Deshalb nehmen wir uns die Zeit, auf Ihre Bedürfnisse einzugehen, um sinnvolle Lösungen zu entwickeln, die auf Ihre spezifischen Anforderungen zugeschnitten sind. Vom ersten Entwurf bis zur endgültigen Lieferung arbeiten wir eng mit Ihnen zusammen, um sicherzustellen, dass Ihr Projekt rechtzeitig und effizient abgeschlossen wird.",
+  "app.homepage.gallery": "Galerie",
+  "app.homepage.galleryButton": "Erkunden Sie unsere Schweißgalerie",
+  "app.homepage.galleryText": "und sehen Sie sich Beispiele unserer Arbeit und die Breite unserer Fähigkeiten an. Unsere langjährige Erfahrung und unser Know-how ermöglichen es uns, kundenspezifische Lösungen selbst für die komplexesten Schweißherausforderungen anzubieten.",
+  "app.homepage.location": "Standort",
+  "app.homepage.locationText": "Wir befinden uns in der Nähe von Maribor, Slowenien, und bieten unsere Dienstleistungen in ganz Europa an",
+  "app.homepage.locationButton": "kontaktiere uns!",
+
+  "app.quality.text": "Die Qualität der erbrachten Dienstleistungen ist unser grundlegender Wettbewerbsvorteil, den wir offiziell anerkannt demonstrieren wollen. Deshalb haben wir Zertifikate erhalten",
+  "app.quality.textBold": "ISO 9001:2008, EN ISO 3834-2, AD 2000 HP0, SCCP, EN 729/3 (DIN 18800/7) in EN 1090-2",
+
   "app.contact.contactUs": "Kontaktiere uns!",
   "app.contact.message": "Nachricht",
   "app.contact.send": "Schicken",
+
   "app.gallery.title1": "Title1",
   "app.gallery.title2": "Title2",
   "app.gallery.title3": "Title3"
