React router refresh 404 problem fixed

--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -32,7 +32,7 @@
   "app.contact.message": "Nachricht",
   "app.contact.send": "Schicken",
 
-  "app.gallery.title1": "Title1",
-  "app.gallery.title2": "Title2",
-  "app.gallery.title3": "Title3"
+  "app.gallery.title1": "Kleine Arbeit",
+  "app.gallery.title2": "Mittlere Arbeit",
+  "app.gallery.title3": "Große Arbeit"
 }
