--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -32,7 +32,7 @@
   "app.contact.message": "Message",
   "app.contact.send": "Send",
 
-  "app.gallery.title1": "Title1",
-  "app.gallery.title2": "Title2",
-  "app.gallery.title3": "Title3"
+  "app.gallery.title1": "Small work",
+  "app.gallery.title2": "Medium work",
+  "app.gallery.title3": "Big work"
 }
