--- a/src/translations/it.json
+++ b/src/translations/it.json
@@ -32,7 +32,7 @@
   "app.contact.message": "Messaggio",
   "app.contact.send": "Send",
 
-  "app.gallery.title1": "Title1",
-  "app.gallery.title2": "Title2",
-  "app.gallery.title3": "Title3"
+  "app.gallery.title1": "Piccolo lavoro",
+  "app.gallery.title2": "Lavoro medio",
+  "app.gallery.title3": "Grande lavoro"
 }
