--- a/src/translations/slo.json
+++ b/src/translations/slo.json
@@ -32,7 +32,7 @@
   "app.contact.message": "Sporočilo",
   "app.contact.send": "Pošlji",
 
-  "app.gallery.title1": "Dodaj naslov!",
-  "app.gallery.title2": "Dodaj naslov!",
-  "app.gallery.title3": "Dodaj naslov!"
+  "app.gallery.title1": "Mala dela",
+  "app.gallery.title2": "Velika dela",
+  "app.gallery.title3": "Srednja dela"
 }
